# GraphUtilities

./: .gitignore  CMakeLists.txt  Doxyfile  DoxyfileDev  LICENSE  License.md  README  Readme.md  valid.sh
examples/: .gitignore  gen.pl
include/: graph.hpp  graph.hpp.in  metis-extra.h  metis-extra.hpp  parser.hpp  queries.hpp  random.hpp
partconv/: .Makefile.un~  .part.cpp.un~  Makefile  README  evalord.cpp  graph.cpp  graph.hpp  part.cpp  test.sh
partconv/examples/: g1.gra  g1_med.gra  g_fft.gra  gen_poly.sh
partconv/examples/polybench/: .cholesky.c.swp  .gen_all.sh.swp  .gen_all.sh.un~  .gen_graphs.sh.swp  .gen_graphs.sh.un~  2mm.c  3mm.c  adi.c  atax.c  bicg.c  cholesky.c  correlation.c  covariance.c  doitgen.c  durbin.c  dynprog.c  fdtd-2d.c  fdtd-apml.c  floyd-warshall.c  gemm.c  gemver.c  gen_graphs.sh  gesummv.c  gramschmidt.c  jacobi-1d-imper.c  jacobi-2d-imper.c  list  lu.c  ludcmp.c  mvt.c  reg_detect.c  seidel-2d.c  symm.c  syr2k.c  syrk.c  trisolv.c  trmm.c
src/: CMakeLists.txt  graph.cpp  graphBenchmarks.cpp  graphCoarsening.cpp  graphCondense.cpp  graphCore.cpp  graphIO.cpp  graphIndexing.cpp  graphMultithread.cpp  graphPartioning.cpp  graphPartition.cpp  graphPartitionConvexify.cpp  graphPartitionEval.cpp  graphPartitionGreedy.cpp  graphPartitionMaxDistance.cpp  graphPartitionPaToH.cpp  graphPartitionSchedule.cpp  graphQuery.cpp  graphReachability.cpp  graphStatistics.cpp  metis-extra.cpp  parser.cpp  queries.cpp  random.cpp  semaphore.cpp  support.cpp  vertex.cpp
src/include/: graph.hpp.in  metis-extra.hpp.in  queries.hpp.in  support.hpp.in  types.hpp.in  vertex.hpp.in
src/include/implementation/: defs.hpp.in  graphImpl.hpp.in  patoh.hpp.in  queriesImpl.hpp.in  semaphore.hpp.in  support.hpp.in  vertexImpl.hpp.in
test/: CMakeLists.txt  driver.cpp  partitionEval.cpp  reachabilityEval.cpp
test/graphs/: agrocyc.gra  human.gra
test/queries/: agrocyc.test  agrocyc_deep_positive.test  agrocyc_positive.test  arxiv.test  arxiv_deep_positive.test  arxiv_positive.test  human.test  human_deep_positive.test  human_positive.test
tools/: .gitignore  CMakeLists.txt
