include(ExternalProject)

ExternalProject_Add(
	mt-metis
	TMP_DIR ${CMAKE_CURRENT_BINARY_DIR}/tmp
	STAMP_DIR ${CMAKE_CURRENT_BINARY_DIR}/stamp
	URL ${CMAKE_CURRENT_SOURCE_DIR}/mt-metis-0.3.tar.gz
	URL_MD5 98284268e08c08013e5a337e0680105e
	PREFIX ${CMAKE_CURRENT_BINARY_DIR}/mt-metis-0.3.0
	SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/mt-metis-0.3.0
	BUILD_IN_SOURCE 1
	CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=${PROJECT_BINARY_DIR} --shared
	BUILD_COMMAND make
	INSTALL_COMMAND make install
	)

install(
	FILES "${PROJECT_BINARY_DIR}/lib/libmtmetis.so"
	DESTINATION "lib"
	)
